tests/typing/pass/array/cross_contract.act
contract A

constructor()

creates

  uint[3] ar := [1,2,3]



contract B

constructor(address<A> a)

creates

  uint y := a.ar[2]
