tests/typing/fail/array/array_mapping_assignment.act
contract B

constructor()

creates

  uint[2] a := [1 => 3, 2 => 10]
